# PyStepikConnect

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check.yml  publish.yml
pystepikconnect/: __init__.py  client.py  enums.py  exceptions.py  models.py  utils.py
pystepikconnect/client/: asynchronous.py  sync.py  synchronous.py
pystepikconnect/core/: __init__.py  auth.py  courses.py  lessons.py  sections.py  stepics.py  steps.py  units.py  users.py
pystepikconnect/types/: __init__.py  block.py  course.py  lesson.py  lessons.py  section.py  sections.py  source.py  step.py  steps.py  unit.py  units.py  user.py
tests/: conftest.py
tests/client/: test_async.py  test_sync.py
