[tool.poetry]
name = "pystepikconnect"
version = "0.1.0"
description = ""
authors = ["Ilya Kuznetsov <ilkztsff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
types-requests = "^2.32.0.20240622"
pydantic = "^2.8.2"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
coverage = "^7.6.0"
python-dotenv = "^1.0.1"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core", "requests", "aiohttp", "pydantic", "types-requests"]
build-backend = "poetry.core.masonry.api"
